--- a/index.html
+++ b/index.html
@@ -12,5 +12,7 @@
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/101/three.js"></script>
 		<script src="OrbitControls.js"></script>
 		<script src="main.js"></script>
+		<div id="stats" style="margin: 10px 100px;"></div>
+		<script src="data.js"></script>
 	</body>
 </html>
